--- a/localTrials/demo.css
+++ b/localTrials/demo.css
@@ -13,6 +13,13 @@ body {
     height: 100vh;
     background-color: #343541;
     color: #ccc;
+    overflow: overlay;
+}
+
+::-webkit-scrollbar {
+    /* MAKES scrollbar invisible */
+    width: 0;
+    background: transparent;
 }
 
 /* =======================  SIDEBAR  ======================== */
